--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ button{
     padding: 24px 0;
     align-items: center;
 }
+/* Logo */
 .logo-container{
     display: flex;
     width: 248px;
@@ -66,6 +67,7 @@ button{
     line-height: 32px; /* 133.333% */
     text-transform: uppercase;
 }
+/* Account */
 .account-container{
     display: flex;
     width: 248px;
@@ -98,6 +100,7 @@ button{
     font-weight: 400;
     line-height: 22px; /* 157.143% */
 }
+/* Navigation */
 .navigation{
     width: 248px;
     display: inline-flex;
@@ -107,7 +110,7 @@ button{
 }
 .navigation-items{
     display: flex;
-    align-items: flex-end;
+    align-items: center;
     gap: 12px;
     align-self: stretch;
 }
@@ -117,6 +120,7 @@ button{
     font-weight: 400;
     line-height: 24px; /* 150% */
 }
+/* Special Bar */
 .specbar{
     display: flex;
     width: 248px;
@@ -140,6 +144,7 @@ button{
     gap: 12px;
     align-self: stretch;
 }
+/* Log Out */
 .Setting{
     display: flex;
     width: 253px;
@@ -154,4 +159,134 @@ button{
     font-weight: 400;
     line-height: 24px; /* 150% */
     background-color: #14171F;
+}
+
+/* Main Content */
+.main-content{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
+/* Header */
+.header{
+    display: flex;
+    max-width: 1080px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+.left-section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+}
+.section-link{
+    color: #2F2F2F;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+}
+.right-section{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.button-mini{
+    display: flex;
+    width: 32px;
+    height: 32px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 600px;
+    background: #F7F7F7;
+}
+.button-img{
+    display: flex;
+    width: 20px;
+    height: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.button-normal{
+    display: flex;
+    padding: 8px 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    border: 1px solid #C7C7C7;
+    background: #F7F7F7;
+    color: #2F2F2F;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px; /* 157.143% */
+}
+
+/* Main */
+.main-container{
+    display: flex;
+    justify-content: center;
+}
+.main{
+    max-width: 1080px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 32px;
+}
+/* Hero */
+.hero{
+    display: flex;
+    width: 1080px;
+    height: 228px;
+    padding: 0 40px;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 16px;
+    border: 1px solid #C7C7C7;
+    background: url("../img/hero.svg") lightgray 50% / cover no-repeat;
+}
+h1{
+    width: 416px;
+    color: #2F2F2F;
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 48px; /* 120% */
+}
+/* Category */
+.category{
+    display: inline-flex;
+    align-items: flex-start;
+    gap: 16px;
+}
+.button-category{
+    display: flex;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    border: 1px solid #C7C7C7;
+    color: #2F2F2F;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px; /* 157.143% */
+}
+.button-category:hover{
+    display: flex;
+    padding: 8px 16px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 50px;
+    border: 1px solid #3D414B;
+    background: #14171F;
+    color: #FFF;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px; /* 157.143% */
 }
