--- a/css/style.css
+++ b/css/style.css
@@ -433,3 +433,96 @@ h1{
     font-weight: 600;
     line-height: 24px; /* 150% */
     }
+/* info conrainer */
+.info-container{
+    display: flex;
+    width: 702px;
+    align-items: center;
+    gap: 24px;
+    }
+.info-left{
+    display: flex;
+    width: 432px;
+    padding: 24px 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 16px;
+    flex-shrink: 0;
+    align-self: stretch;
+    border-radius: 16px;
+    border: 1px solid #C7C7C7;
+}
+.info-header{
+    display: flex;
+    align-items: center;
+    gap: 116px;
+    align-self: stretch;
+}
+.info-header-text{
+    width: 254px;
+    align-self: stretch;
+    color: #14171F;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+}
+.info-bottom{
+    display: flex;
+    padding: 16px;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex: 1 0 0;
+    align-self: stretch;
+    border-radius: 12px;
+    background: #F9FBFC;
+    gap: 24px;
+}
+.info-list{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex: 1 0 0;
+    align-self: stretch;
+}
+.info-items{
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+    align-self: stretch;
+}
+.info-edit{
+    display: flex;
+    width: 32px;
+    height: 32px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 600px;
+    border: 1px solid #C7C7C7;
+}
+.img-edit{
+    display: flex;
+    width: 20px;
+    height: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+}
+.info-category-name{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+}
+.info-subhead{
+    color: #666;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+}
+.info-subfoot{
+    color: #14171F;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+}
