--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,14 @@ button{
     display: flex;
     flex-direction: column;
     gap: 32px;
+    align-items: center;
+    margin-top: 24px;
 }
+.main-section{
+    display: flex;
+    gap: 32px;
+}
+
 /* Header */
 .header{
     display: flex;
@@ -291,6 +298,11 @@ h1{
     line-height: 22px; /* 157.143% */
 }
 /* Personal Info */
+.personal-box{
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+}
 .personal-information{
     display: flex;
     width: 702px;
@@ -436,17 +448,22 @@ h1{
 /* info conrainer */
 .info-section{
     display: flex;
-    width: 702px;
+    max-width: 702px;
+    width: 100%;
     align-items: center;
     gap: 24px;
 }
 .info-container{
     display: flex;
-    width: 702px;
-    height: 272px;
-    align-items: center;
-    gap: 24px;
-    }
+    max-width: 432px;
+    width: 100%;
+    max-height: 272px;
+    height: 100%;
+    align-items: flex-start;
+    gap: 16px;
+    flex-shrink: 0;
+    align-self: stretch;
+}
 .info-left{
     display: flex;
     width: 432px;
@@ -544,7 +561,12 @@ h1{
     align-self: stretch;
     border-radius: 16px;
     border: 1px solid #C7C7C7;
+    max-width: 246px;
+    width: 100%;
+    max-height: 272px;
+    height: 100%;
 }
+
 .additional-header{
     display: flex;
     justify-content: space-between;
@@ -618,10 +640,166 @@ h1{
     border-radius: 8px;
     border: 1px solid #C7C7C7;
     background: #F9FBFC;
+    max-width: 84px;
+    width: 100%;
+    height: 48px;
 }
 .https::placeholder{
     color: #666;
     font-size: 14px;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+}
+.link-social{
+    display: flex;
+    padding: 12px 16px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid #C7C7C7;
+    background: #F9FBFC;
+    color: #666;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
+}
+.link-social:hover{
+    display: flex;
+    height: 42px;
+    padding: 10px 16px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    display: flex;
+    height: 42px;
+    padding: 10px 16px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 8px;
+    background: #D2F0FF;
+}
+/* My Section */
+.my-section{
+    display: flex;
+    width: 346px;
+    padding: 16px;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    border-radius: 16px;
+    background: #14171F;
+}
+.my-info{
+    display: flex;
+    padding: 16px;
+    flex-direction: column;
+    align-items: center;
+    gap: 12px;
+    align-self: stretch;
+    border-radius: 12px;
+    background: #FFF;
+}
+.my-info-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    align-self: stretch;
+}
+.avatar-my{
+    width: 124px;
+    height: 124px;
+    flex-shrink: 0;
+    border-radius: 100px;
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%), url(<path-to-image>) lightgray 50% / cover no-repeat;
+}
+.my-info-bottom{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+    align-self: stretch;
+}
+.tag{
+    display: flex;
+    align-items: flex-start;
+    gap: 16px;
+    align-self: stretch;
+}
+.tag-button{
+    display: flex;
+    padding: 8px 12px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    flex: 1 0 0;
+    border-radius: 50px;
+    border: 1px solid #C7C7C7;
+    color: #2F2F2F;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 22px; /* 157.143% */
+}
+.my-location{
+    display: flex;
+    padding: 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 12px;
+    background: #FFF;
+}
+.name-location{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+.location-names{
+    color: #2F2F2F;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+}
+#location{
+    display: flex;
+    padding: 12px 16px;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid #C7C7C7;
+    background: #F9FBFC;
+}
+.my-about{
+    display: flex;
+    padding: 16px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 12px;
+    background: #FFF;
+}
+.about-name{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-self: stretch;
+}
+#about{
+    display: flex;
+    padding: 12px 16px;
+    align-items: center;
+    gap: 10px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1px solid #C7C7C7;
+    color: #666;
+]    font-size: 14px;
     font-weight: 400;
     line-height: 24px; /* 171.429% */
 }
