--- a/css/style.css
+++ b/css/style.css
@@ -773,6 +773,10 @@ h1{
     border-radius: 8px;
     border: 1px solid #C7C7C7;
     background: #F9FBFC;
+    color: #666;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 24px; /* 171.429% */
 }
 .my-about{
     display: flex;
@@ -793,13 +797,14 @@ h1{
 #about{
     display: flex;
     padding: 12px 16px;
+    height: 270px;
     align-items: center;
     gap: 10px;
     align-self: stretch;
     border-radius: 8px;
     border: 1px solid #C7C7C7;
     color: #666;
-]    font-size: 14px;
+    font-size: 14px;
     font-weight: 400;
     line-height: 24px; /* 171.429% */
 }
