--- a/css/style.css
+++ b/css/style.css
@@ -714,6 +714,11 @@ h1{
     border-radius: 100px;
     background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%), url(<path-to-image>) lightgray 50% / cover no-repeat;
 }
+.nav-bt{
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
 .my-info-bottom{
     display: flex;
     flex-direction: column;
@@ -807,4 +812,26 @@ h1{
     font-size: 14px;
     font-weight: 400;
     line-height: 24px; /* 171.429% */
+}
+.my-about-name{
+    color: #2F2F2F;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px; /* 150% */
+}
+.my-about-subname{
+    color: #2F2F2F;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 24px; /* 171.429% */
+}
+.my-name-info{
+    color: #2F2F2F;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 32px; /* 133.333% */
+    align-self: stretch;
 }
