--- a/css/style.css
+++ b/css/style.css
@@ -169,10 +169,14 @@ button{
     gap: 32px;
     align-items: center;
     margin-top: 24px;
+    flex-wrap: wrap;
 }
 .main-section{
     display: flex;
     gap: 32px;
+    width: 100%;
+    max-width: 1080px;
+    flex-wrap: wrap;
 }
 
 /* Header */
@@ -182,6 +186,7 @@ button{
     width: 100%;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
 }
 .left-section{
     display: flex;
@@ -248,7 +253,8 @@ button{
 /* Hero */
 .hero{
     display: flex;
-    width: 1080px;
+    max-width: 1080px;
+    width: 100%;
     height: 228px;
     padding: 0 40px;
     align-items: center;
@@ -269,6 +275,9 @@ h1{
     display: inline-flex;
     align-items: flex-start;
     gap: 16px;
+    width: 100%;
+    max-width: 1080px;
+    flex-wrap: wrap;
 }
 .button-category{
     display: flex;
@@ -305,7 +314,8 @@ h1{
 }
 .personal-information{
     display: flex;
-    width: 702px;
+    max-width: 702px;
+    width: 100%;
     padding: 24px 16px;
     flex-direction: column;
     align-items: flex-end;
@@ -452,6 +462,7 @@ h1{
     width: 100%;
     align-items: center;
     gap: 24px;
+    flex-wrap: wrap;
 }
 .info-container{
     display: flex;
