--- a/css/style.css
+++ b/css/style.css
@@ -846,3 +846,42 @@ h1{
     line-height: 32px; /* 133.333% */
     align-self: stretch;
 }
+@media (max-width: 768px) {
+    .sidebar{
+        display: none;
+    }
+    .header{
+        display: flex;
+        padding: 16px 32px;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .main{
+        max-width: 704px;
+        width: 100%;
+    }
+    .main-section{
+        flex-direction: column-reverse;
+    }
+    .my-section{
+        display: flex;
+        padding: 16px;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+        align-self: stretch;
+        border-radius: 16px;
+        background: #14171F;
+        max-width: 704px;
+        width: 100%;
+    }
+    .container{
+        display: flex;
+        max-width: 768px;
+        width: 100%;
+        padding-bottom: 61px;
+        flex-direction: column;
+        align-items: center;
+        gap: 24px;
+    }
+}
