--- a/css/style.css
+++ b/css/style.css
@@ -846,6 +846,10 @@ h1{
     line-height: 32px; /* 133.333% */
     align-self: stretch;
 }
+
+
+/* Media For Tablet */
+
 @media (max-width: 768px) {
     .sidebar{
         display: none;
@@ -882,6 +886,143 @@ h1{
         padding-bottom: 61px;
         flex-direction: column;
         align-items: center;
+        gap: 24px;
+    }
+    .category{
+        display: flex;
+        align-items: flex-start;
+        align-content: flex-start;
+        gap: 16px;
+        flex-wrap: wrap;
+    }
+    .personal-information{
+        display: flex;
+        padding: 24px 16px;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 16px;
+        align-self: stretch;
+    }
+    .info-section{
+        display: flex;
+        height: 323px;
+        align-items: center;
+        gap: 24px;
+        align-self: stretch;
+    }
+}
+
+/* Media For Mobile */
+
+@media (max-width: 320px){
+    .container{
+        max-width: 320px;
+        width: 100%;
+    }
+    .header{
+        display: flex;
+        width: 320px;
+        padding: 12px 16px;
+        align-items: center;
+        align-content: center;
+        gap: 12px;
+        flex-wrap: wrap;
+    }
+    .main{
+        display: flex;
+        align-items: center;
+        max-width: 320px;
+        width: 100%;
+    }
+    .main-content{
+        align-content: center;
+        width: 288px;
+    }
+    .hero{
+        max-width: 288px;
+        width: 100%;
+        height: 228px;
+        flex-shrink: 0;
+        border-radius: 16px;
+        border: 1px solid #C7C7C7;
+        background: url("../img/hero-mobile.svg") lightgray 50% / cover no-repeat;
+    }
+    .hero h1{
+        width: 248px;
+        color: #2F2F2F;
+        font-size: 24px;
+        font-weight: 600;
+        line-height: 32px; /* 133.333% */
+    }
+    .category{
+        display: flex;
+        max-width: 288px;
+        width: 100%;
+        align-items: flex-start;
+        align-content: flex-start;
+        gap: 16px;
+        flex-wrap: wrap;
+    }
+    .my-section{
+        display: flex;
+        max-width: 288px;
+        width: 100%;
+        padding: 16px;
+        flex-direction: column;
+        align-items: center;
+        gap: 12px;
+    }
+    .personal-information{
+        display: flex;
+        max-width: 288px;
+        width: 100%;
+        padding: 24px 16px;
+        flex-direction: column;
+        align-items: flex-end;
+        gap: 16px;
+    }
+    .personal-name{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+        align-self: stretch;
+    }
+    .info-container{
+        display: flex;
+        max-width: 288px;
+        width: 100%;
+        padding: 24px 16px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 24px;
+    }
+    .info-section{
+        height: 1000px;
+    }
+    .info-left{
+        display: flex;
+        max-width: 288px;
+        width: 100%;
+        padding: 24px 16px;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 24px;
+    }
+    .info-list{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 24px;
+        align-self: stretch;
+    }
+    .additional-info{
+        display: flex;
+        max-width: 288px;
+        width: 100%;
+        padding: 24px 16px;
+        flex-direction: column;
+        align-items: flex-start;
         gap: 24px;
     }
 }
