--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,8 @@ button{
 /* Logo */
 .logo-container{
     display: flex;
-    width: 248px;
+    max-width: 248px;
+    width: 100%;
     padding: 0px 16px 16px 16px;
     flex-direction: column;
     justify-content: center;
@@ -70,7 +71,8 @@ button{
 /* Account */
 .account-container{
     display: flex;
-    width: 248px;
+    max-width: 248px;
+    width: 100%;
     padding: 12px 0px;
     justify-content: space-between;
     align-items: center;
@@ -84,7 +86,8 @@ button{
 }
 .avatar-text{
     display: flex;
-    width: 113px;
+    max-width: 113px;
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
 }
@@ -102,7 +105,8 @@ button{
 }
 /* Navigation */
 .navigation{
-    width: 248px;
+    max-width: 248px;
+    width: 100%;
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
@@ -123,7 +127,8 @@ button{
 /* Special Bar */
 .specbar{
     display: flex;
-    width: 248px;
+    max-width: 248px;
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
@@ -132,7 +137,8 @@ button{
 }
 .specbar-items{
     display: flex;
-    width: 137px;
+    max-width: 137px;
+    width: 100%;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
@@ -147,7 +153,8 @@ button{
 /* Log Out */
 .Setting{
     display: flex;
-    width: 253px;
+    max-width: 253px;
+    width: 100%;
     padding: 12px 24px;
     justify-content: center;
     align-items: center;
@@ -176,7 +183,6 @@ button{
     gap: 32px;
     width: 100%;
     max-width: 1080px;
-    flex-wrap: wrap;
 }
 
 /* Header */
@@ -320,7 +326,6 @@ h1{
 }
 .personal-information{
     display: flex;
-    max-width: 702px;
     width: 100%;
     padding: 24px 16px;
     flex-direction: column;
@@ -464,11 +469,9 @@ h1{
 /* info conrainer */
 .info-section{
     display: flex;
-    max-width: 702px;
     width: 100%;
     align-items: center;
     gap: 24px;
-    flex-wrap: wrap;
 }
 .info-container{
     display: flex;
@@ -483,7 +486,8 @@ h1{
 }
 .info-left{
     display: flex;
-    width: 432px;
+    max-width: 432px;
+    width: 100%;
     padding: 24px 16px;
     flex-direction: column;
     align-items: flex-start;
@@ -500,7 +504,8 @@ h1{
     align-self: stretch;
 }
 .info-header-text{
-    width: 254px;
+    max-width: 254px;
+    width: 100%;
     align-self: stretch;
     color: #14171F;
     font-size: 16px;
@@ -876,7 +881,7 @@ input:hover{
 
 /* Media For Tablet */
 
-@media (max-width: 768px) {
+@media screen and (max-width: 1024px) {
     .sidebar{
         display: none;
     }
@@ -886,12 +891,11 @@ input:hover{
         justify-content: space-between;
         align-items: center;
     }
-    .main{
-        max-width: 704px;
-        width: 100%;
-    }
     .main-section{
         flex-direction: column-reverse;
+    }
+    .main-container{
+        padding: 16px 32px;
     }
     .my-section{
         display: flex;
@@ -902,12 +906,10 @@ input:hover{
         align-self: stretch;
         border-radius: 16px;
         background: #14171F;
-        max-width: 704px;
         width: 100%;
     }
     .container{
         display: flex;
-        max-width: 768px;
         width: 100%;
         padding-bottom: 61px;
         flex-direction: column;
@@ -976,14 +978,15 @@ input:hover{
 
 /* Media For Mobile */
 
-@media (max-width: 320px){
+@media screen and (max-width: 767px){
     .container{
         max-width: 320px;
         width: 100%;
     }
     .header{
         display: flex;
-        width: 320px;
+        max-width: 320px;
+        width: 100%;
         padding: 12px 16px;
         align-items: center;
         align-content: center;
@@ -1083,7 +1086,6 @@ input:hover{
     }
     .additional-info{
         display: flex;
-        max-width: 288px;
         width: 100%;
         padding: 24px 16px;
         flex-direction: column;
