--- a/css/style.css
+++ b/css/style.css
@@ -980,14 +980,11 @@ input:hover{
 
 @media screen and (max-width: 767px){
     .container{
-        max-width: 320px;
         width: 100%;
     }
     .header{
         display: flex;
-        max-width: 320px;
         width: 100%;
-        padding: 12px 16px;
         align-items: center;
         align-content: center;
         gap: 12px;
@@ -996,15 +993,12 @@ input:hover{
     .main{
         display: flex;
         align-items: center;
-        max-width: 320px;
         width: 100%;
     }
     .main-content{
         align-content: center;
-        width: 288px;
     }
     .hero{
-        max-width: 288px;
         width: 100%;
         height: 228px;
         flex-shrink: 0;
@@ -1013,7 +1007,8 @@ input:hover{
         background: url("../img/heromobile.svg") lightgray 50% / cover no-repeat;
     }
     .hero h1{
-        width: 248px;
+        max-width: 248px;
+        width: 100%;
         color: #2F2F2F;
         font-size: 24px;
         font-weight: 600;
@@ -1021,7 +1016,6 @@ input:hover{
     }
     .category{
         display: flex;
-        max-width: 288px;
         width: 100%;
         align-items: flex-start;
         align-content: flex-start;
@@ -1030,7 +1024,6 @@ input:hover{
     }
     .my-section{
         display: flex;
-        max-width: 288px;
         width: 100%;
         padding: 16px;
         flex-direction: column;
