--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,7 @@ button{
 /* Logo */
 .logo-container{
     display: flex;
-    max-width: 248px;
-    width: 100%;
+    width: 248px;
     padding: 0px 16px 16px 16px;
     flex-direction: column;
     justify-content: center;
@@ -71,8 +70,7 @@ button{
 /* Account */
 .account-container{
     display: flex;
-    max-width: 248px;
-    width: 100%;
+    width: 248px;
     padding: 12px 0px;
     justify-content: space-between;
     align-items: center;
@@ -86,8 +84,7 @@ button{
 }
 .avatar-text{
     display: flex;
-    max-width: 113px;
-    width: 100%;
+    width: 113px;
     flex-direction: column;
     align-items: flex-start;
 }
@@ -105,8 +102,7 @@ button{
 }
 /* Navigation */
 .navigation{
-    max-width: 248px;
-    width: 100%;
+    width: 248px;
     display: inline-flex;
     flex-direction: column;
     align-items: flex-start;
@@ -127,8 +123,7 @@ button{
 /* Special Bar */
 .specbar{
     display: flex;
-    max-width: 248px;
-    width: 100%;
+    width: 248px;
     flex-direction: column;
     align-items: flex-start;
     gap: 32px;
@@ -137,8 +132,7 @@ button{
 }
 .specbar-items{
     display: flex;
-    max-width: 137px;
-    width: 100%;
+    width: 137px;
     flex-direction: column;
     align-items: flex-start;
     gap: 20px;
@@ -153,8 +147,7 @@ button{
 /* Log Out */
 .Setting{
     display: flex;
-    max-width: 253px;
-    width: 100%;
+    width: 253px;
     padding: 12px 24px;
     justify-content: center;
     align-items: center;
@@ -177,6 +170,7 @@ button{
     align-items: center;
     margin-top: 24px;
     flex-wrap: wrap;
+    padding: 0 20px;
 }
 .main-section{
     display: flex;
@@ -326,6 +320,7 @@ h1{
 }
 .personal-information{
     display: flex;
+    max-width: 702px;
     width: 100%;
     padding: 24px 16px;
     flex-direction: column;
@@ -469,9 +464,11 @@ h1{
 /* info conrainer */
 .info-section{
     display: flex;
+    max-width: 702px;
     width: 100%;
     align-items: center;
     gap: 24px;
+    flex-wrap: wrap;
 }
 .info-container{
     display: flex;
@@ -486,8 +483,7 @@ h1{
 }
 .info-left{
     display: flex;
-    max-width: 432px;
-    width: 100%;
+    width: 432px;
     padding: 24px 16px;
     flex-direction: column;
     align-items: flex-start;
@@ -504,8 +500,7 @@ h1{
     align-self: stretch;
 }
 .info-header-text{
-    max-width: 254px;
-    width: 100%;
+    width: 254px;
     align-self: stretch;
     color: #14171F;
     font-size: 16px;
@@ -881,7 +876,7 @@ input:hover{
 
 /* Media For Tablet */
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .sidebar{
         display: none;
     }
@@ -930,6 +925,7 @@ input:hover{
         align-items: flex-end;
         gap: 16px;
         align-self: stretch;
+        max-width: none;
     }
     .hero{
         background: url("../img/herotablet.svg") lightgray 50% / cover no-repeat;
@@ -974,53 +970,77 @@ input:hover{
         align-items: center;
         gap: 10px;
     }
+    .additional-info{
+        max-width: none;
+    }
 }
 
 /* Media For Mobile */
 
-@media screen and (max-width: 767px){
-    .container{
-        width: 100%;
+@media screen and (min-width: 320px) and (max-width: 767px){
+    .sidebar{
+        display: none;
     }
     .header{
         display: flex;
-        width: 100%;
+        padding: 12px 16px;
         align-items: center;
         align-content: center;
         gap: 12px;
         flex-wrap: wrap;
     }
-    .main{
-        display: flex;
-        align-items: center;
-        width: 100%;
-    }
-    .main-content{
-        align-content: center;
-    }
     .hero{
-        width: 100%;
-        height: 228px;
+        background: url('../img/heromobile.svg') lightgray 50% / cover no-repeat;
         flex-shrink: 0;
-        border-radius: 16px;
-        border: 1px solid #C7C7C7;
-        background: url("../img/heromobile.svg") lightgray 50% / cover no-repeat;
     }
     .hero h1{
-        max-width: 248px;
-        width: 100%;
         color: #2F2F2F;
         font-size: 24px;
         font-weight: 600;
         line-height: 32px; /* 133.333% */
+        width: 248px;
     }
     .category{
         display: flex;
-        width: 100%;
         align-items: flex-start;
         align-content: flex-start;
         gap: 16px;
         flex-wrap: wrap;
+    }
+    .button-category{
+        display: flex;
+        padding: 8px 16px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 50px;
+        border: 1px solid #C7C7C7;
+        color: #2F2F2F;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 22px; /* 157.143% */
+    }
+    .button-category:hover{
+        display: flex;
+        padding: 8px 16px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 50px;
+        border: 1px solid #3D414B;
+        background: #14171F;
+        color: #FFF;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 22px; /* 157.143% */
+    }
+    
+    .main-section {
+        display: flex;
+        gap: 32px;
+        width: 100%;
+        max-width: 1080px;
+        flex-direction: column-reverse;
     }
     .my-section{
         display: flex;
@@ -1029,148 +1049,5 @@ input:hover{
         flex-direction: column;
         align-items: center;
         gap: 12px;
-    }
-    .personal-information{
-        display: flex;
-        width: 100%;
-        padding: 24px 16px;
-        flex-direction: column;
-        align-items: flex-end;
-        gap: 16px;
-    }
-    .personal-name{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 16px;
-        align-self: stretch;
-    }
-    .info-container{
-        display: flex;
-        flex-direction: column;
-    }
-    .info-section{
-        height: 850px;
-        flex-direction: column;
-    }
-    .info-left{
-        display: flex;
-        max-width: 288px;
-        width: 100%;
-        padding: 24px 16px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 24px;
-    }
-    .info-list{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 24px;
-        align-self: stretch;
-    }
-    .info-bottom{
-        display: flex;
-        padding: 16px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 20px;
-        align-self: stretch;
-    }
-    .additional-info{
-        display: flex;
-        width: 100%;
-        padding: 24px 16px;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 24px;
-    }
-    .burger-menu{
-        display: flex;
-        width: 32px;
-        height: 32px;
-        justify-content: space-between;
-        align-items: center;
-        justify-content: center;
-        flex-shrink: 0;
-        border-radius: 600px;
-        background: #F7F7F7;
-    }
-    .burger-menu-img{
-        width: 20.008px;
-        height: 20.008px;
-        flex-shrink: 0;
-    }
-    .section-link{
-        color: #2F2F2F;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 24px; /* 171.429% */
-    }
-    .left-section{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 8px;
-    }
-    .right-section{
-        display: flex;
-        max-width: 286px;
-        width: 100%;
-        align-items: center;
-        gap: 8px;
-        flex-shrink: 0;
-    }
-    .button-normal{
-        display: flex;
-        padding: 4px 8px;
-        justify-content: center;
-        align-items: center;
-        gap: 10px;
-        border-radius: 50px;
-        border: 1px solid #C7C7C7;
-        background: #F7F7F7;
-        color: #2F2F2F;
-        font-size: 12px;
-        font-weight: 400;
-        line-height: 22px; /* 183.333% */
-    }
-    .personal-name-left{
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 8px;
-        align-self: stretch;
-    }
-    .number-fix{
-        display: flex;
-        align-items: flex-start;
-        gap: 8px;
-        align-self: stretch;
-    }
-    .mobile-number{
-        display: flex;
-        padding: 12px 16px;
-        align-items: center;
-        gap: 10px;
-        flex: 1 0 0;
-        border-radius: 8px;
-        border: 1px solid #C7C7C7;
-        background: #F9FBFC;
-        max-width: 180px;
-         width: 100%;
-    }
-    .number-index{
-        display: flex;
-        padding: 12px 16px;
-        align-items: center;
-        gap: 10px;
-        border-radius: 8px;
-        border: 1px solid #C7C7C7;
-        background: #14171F;
-        color: #FFF;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: 24px; /* 171.429% */
     }
 }
